# LayeredTypes

./: .gitignore  .gitmodules  main.py  pytest.ini  requirements.txt
.github/workflows/: cabal.yml  latex.yml  python-unittests.yml
code/LayeredTypes/: main.py  pytest.ini  requirements.txt
compiler/: grammar_file.lark
compiler/interpreters/: LiquidTypeChecker.py
compiler/transformers/: CollectLayers.py  CreateAnnotatedTree.py
examples/code/: bubble_sort.fl  numbers.data  use_case_2.fl  use_case_2_separate_layers.fl
examples/python_impls/: use_case_2.py
layer_implementations/: cols.py  rowcols.py  rows.py  typecheck.py
layers/: LayerImplWrapper.py
paper/: background.tex  implementation.tex  introduction.tex  literature.bib  paper.tex  types2023.tex  use-cases.tex
paper/chapters/: implementation.tex  type_system.tex
paper/code_examples/: LayeredTypes-code-examples.cabal
paper/samples/: sample-acmlarge.tex  sample-acmsmall-biblatex.tex  sample-acmsmall-submission.tex  sample-acmsmall.tex  sample-acmtog.tex  sample-lualatex.tex  sample-manuscript.tex  sample-sigconf-biblatex.tex  sample-sigconf-i13n.tex  sample-sigconf.tex  sample-xelatex.tex
tests/: implementations.py  test_control_flow.py  test_interpreter.py  test_layers.py  utils.py
tests/layer_implementations/: A.py  B.py  C.py  D.py  blockedLayerC.py  cycleA.py  cycleB.py  failLayerA.py
tests/test_code/: factorial.fl  (+1 more)
tex/: literature.bib
tex/code_examples/: LayeredTypes-code-examples.cabal
tex/code_examples/lib/: Main.hs
tex/code_examples/lib/Examples/: BasicLT.hs  CombinedLT.hs
(+267 files in other folders)
